--- a/hvigor/hvigor-config.json5
+++ b/hvigor/hvigor-config.json5
@@ -2,5 +2,8 @@
   "hvigorVersion": "2.4.2",
   "dependencies": {
     "@ohos/hvigor-ohos-plugin": "2.4.2"
+  },
+  "debugging": {
+    "stacktrace": true
   }
 }
