--- a/AppScope/app.json5
+++ b/AppScope/app.json5
@@ -1,10 +1,10 @@
 {
   "app": {
-    "bundleName": "com.example.myapplication",
+    "bundleName": "com.example.myapplication",  //应用的唯一标识
     "vendor": "example",
-    "versionCode": 1000000,
-    "versionName": "1.0.0",
-    "icon": "$media:app_icon",
-    "label": "$string:app_name"
+    "versionCode": 1000000,    //版本
+    "versionName": "1.0.0",    //版本
+    "icon": "$media:app_icon",   //应用图标(应用列表中的，非桌面上)
+    "label": "$string:app_name"    //应用名(应用列表中的，非桌面上)
   }
 }
